--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "gsap": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "remixicon": "^4.6.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
